# Nengok

./: .env.example  .gcloudignore  .gitignore  CHANGELOG.md  LICENSE  README.md  annotate_demo.py  hatch_build.py  pyproject.toml
.github/: CODEOWNERS  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: dashboard-deploy.yml  frontend-ci.yml  phoenix-harness.yml  publish.yml  sdk-ci.yml
artifacts/: README.md
deploy/: Dockerfile  README.md  cloud-run-migrations.yaml  cloud-run.yaml  cloudbuild.yaml  demo_state.db  runmonitoring.yaml
deploy/local/: cloud-sql-auth-proxy.ps1  cloud-sql-auth-proxy.sh  docker-compose.mysql.yml  docker-compose.postgres.yml
deploy/terraform/: cloud_sql.tf
docs/: agent-builder.md  audit-export.md  configuration.md  database-grants.md  extending.md  release-notes.md  security.md  tui-review.md
docs/adr/: 0001-slack-routes-use-slack-signature-verification-not-dashboard-bearer-token.md  0002-version-artifact-bundles-with-manifest.md  0003-notifier-dispatcher-instead-of-slack-direct-integration.md  0004-slack-approvals-require-resolved-human-identity.md
examples/: config-cloud.toml  config-qa-agent.toml
frontend/: .gitignore  index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css  router.tsx
frontend/src/api/: advice.ts  approvals.ts  artifacts.ts  client.ts  clusters.ts  dashboard.ts  experiments.ts
frontend/src/components/: AdvicePanel.tsx  StatusBadge.tsx
frontend/src/components/charts/: CaseOutcomeStrip.tsx  ChartEmptyState.tsx  ChartTooltip.tsx  CycleCostBars.tsx  PassRateComparison.tsx  RateTrendChart.tsx  SpendAreaChart.tsx  StatusDistributionBar.tsx  chartScale.ts  cycleStatus.ts  useContainerWidth.ts
frontend/src/components/clusters/: ApprovalHistory.tsx  ClusterCard.tsx  ExperimentTable.tsx  LinkedClusters.tsx  PromptDiff.tsx  WrongMergePanel.tsx
frontend/src/components/layout/: Header.tsx  LayoutContext.tsx  PageHeader.tsx  SectionHeader.tsx  TopBar.tsx  useLayout.ts
frontend/src/components/ui/: Badge.tsx  Button.tsx  Card.tsx  EmptyState.tsx  ErrorState.tsx  InlineCode.tsx  LinkButton.tsx  Skeleton.tsx  Sparkline.tsx  Stat.tsx
frontend/src/layouts/: DashboardLayout.tsx
frontend/src/lib/: clusterHelpers.ts  experimentHelpers.ts  format.ts
frontend/src/pages/: ClusterDetailPage.tsx  ClustersPage.tsx  LoginPage.tsx  OverviewPage.tsx
frontend/src/test/: renderWithProviders.tsx
frontend/src/types/: approval.ts  artifact.ts  cluster.ts  dashboard.ts  experiment.ts
golden_dataset/: README.md  clustering_golden.json  qa_golden.json  travel_planner_golden.json
nengok/: __init__.py  cli.py  cli_helpers.py  config.py  errors.py  init_wizard.py  reviewer.py
nengok/agents/: __init__.py  triage.py  triage_prompt.md
nengok/core/: circuit_breaker.py  cost.py  incidents.py  orchestrator.py  types.py
nengok/core/diagnoser/: _text.py  clusterer.py  cross_agent.py  hypothesizer.py  matcher.py
nengok/core/evaluators/: aggregate.py  clustering_score.py  code_evals.py  llm_judges.py
nengok/core/fixer/: experiment_runner.py  loaders.py  prompt_proposer.py  test_generator.py
nengok/core/improver/: __init__.py  retro.py
nengok/core/observer/: anomaly_filter.py  redactor.py  sampler.py
nengok/core/verifier/: artifact_writer.py  gate.py  manifest.py
nengok/diagnostics/: __init__.py  agent_runner_probe.py  base.py  baseline_prompt_probe.py  config_probe.py  db_privileges.py  gemini_probe.py  phoenix_probe.py  phoenix_project_probe.py  triage_probe.py
nengok/notifiers/: dispatcher.py  events.py  loader.py  protocol.py
nengok/notifiers/slack/: messages.py  notifier.py
nengok/phoenix/: client.py  mcp.py  preflight.py  spans.py
nengok/runners/: __init__.py  _task.py  agent_runner.py  loader.py  protocol.py  sample_agent_runner.py
nengok/server/: auth.py  dependencies.py  health.py  main.py  metrics.py  rate_limit.py
nengok/server/routes/: advice.py  approvals.py  artifacts.py  clusters.py  dashboard.py  experiments.py  slack.py
nengok/state/: alembic.ini  alembic_runner.py  connection.py  export.py  migrator.py  schema.sql  store.py
nengok/state/alembic/: _helpers.py  env.py  script.py.mako
nengok/state/migrations/: 0001_initial.sql  0002_approval_audit.sql  0003_cycle_history.sql
nengok/templates/: __init__.py  config-local.toml  config-qa-agent.toml
nengok/tui/: __init__.py  api_client.py  app.py
nengok/tui/screens/: __init__.py  approval_modal.py  cluster_detail.py  cluster_list.py
nengok/utils/: gemini.py  genai_client.py  logging.py  tracing.py
phoenix_harness/: __init__.py  conftest.py  test_clustering_golden.py  test_datasets.py  test_experiments.py  test_golden_comparison.py  test_prompts.py  test_spans.py
sample_agent/: __init__.py  agent.py  seed.py
sample_agent/prompts/: travel_planner.md
sample_agent/qa_agent/: __init__.py  agent.py  seed.py
sample_agent/qa_agent/prompts/: qa.md
sample_agent/tools/: failure_modes.py  flights.py  hotels.py  weather.py
tests/: conftest.py  fixtures_redactor.py  test_advice_routes.py  test_agent_runner.py  test_aggregate.py  test_alembic_version_namespace.py  test_anomaly_filter.py  test_approval_audit.py  test_artifact_writer.py  test_audit_export.py  test_baseline_loader.py  test_circuit_breaker.py  test_cli_error_dispatch.py  test_cluster_feedback.py  test_cluster_links_route.py  test_cluster_matcher.py  test_clusterer.py  test_clustering_quality.py  test_clustering_retro.py  test_config.py  test_config_show.py  test_config_templates.py  test_config_validation.py  test_connection_factory.py  test_cost_tracker.py  test_cross_agent_linker.py  test_cycle_history.py  test_dashboard_auth.py  test_dashboard_overview.py  test_dashboard_route.py  test_database_url_redaction.py  test_db_privileges_probe.py  test_doctor_command.py  test_error_messages.py  test_experiment_store.py  test_gemini_retry.py  test_gemini_wrapper.py  test_genai_client.py  test_health_endpoint.py  test_hypothesizer.py  (+40 more)
(+15 files in other folders)
