[build-system]
requires = ["hatchling>=1.27.0"]
build-backend = "hatchling.build"

[project]
name = "nengok"
dynamic = ["version"]
description = "The autonomous quality agent for Arize Phoenix. Phoenix shows you what's wrong. Nengok fixes it."
readme = "README.md"
requires-python = ">=3.11"
license = { text = "Apache-2.0" }
authors = [
    { name = "The Nengok Authors", email = "hello@nengok.dev" },
]
keywords = [
    "ai",
    "llm",
    "agents",
    "observability",
    "evaluation",
    "phoenix",
    "arize",
    "gemini",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]
dependencies = [
    "typer>=0.12.0",
    "pydantic>=2.6.0",
    "httpx>=0.27.0",
    "fastapi>=0.115.0,!=0.136.3",
    "uvicorn[standard]>=0.30.0",
    "python-dotenv>=1.0.0",
    "tenacity>=8.4.0",
    "python-json-logger>=2.0.7",
    "prometheus-client>=0.20.0",
    "slowapi>=0.1.9",
    "SQLAlchemy~=2.0",
    "alembic~=1.13",
    "psycopg[binary]~=3.2",
    "pymysql~=1.1",
]

[project.optional-dependencies]
phoenix = [
    "arize-phoenix-client==2.7.0",
    "arize-phoenix-evals>=0.20.0",
    "arize-phoenix-otel>=0.16.0",
    "openinference-instrumentation>=0.1.0",
    # Override the transitive that arize-phoenix pulls in: 0.314.3 carries
    # CVE-2026-45739, fixed in 0.315.4.
    "strawberry-graphql>=0.315.4",
]
server = [
    "fastapi>=0.115.0,!=0.136.3",
    "uvicorn[standard]>=0.30.0",
]
clustering = [
    "sentence-transformers>=3.0.0",
    "hdbscan>=0.8.40",
]
gemini = [
    "google-genai>=0.7.0",
    "openinference-instrumentation-google-genai>=1.0.0",
]
tui = [
    "textual>=0.85.0,<1.0",
    "rich>=13.7.0",
]
adk = [
    # Exact pin: the MCP toolset module path has moved between ADK releases,
    # so every import in nengok/agents/triage.py is verified against this
    # version. Bumping the pin means re-verifying those imports. The [mcp]
    # extra matters: google-adk keeps the mcp python SDK optional, and the
    # toolset import fails without it.
    "google-adk[mcp]==2.2.0",
]
slack = [
    "slack-bolt>=1.18.0",
]
dev = [
    "ruff==0.6.9",
    "mypy>=1.11.0",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "types-requests",
]

[project.scripts]
nengok = "nengok.cli:app"

[project.urls]
Homepage = "https://github.com/waizwafiq/nengok"
Documentation = "https://github.com/waizwafiq/nengok#readme"
Repository = "https://github.com/waizwafiq/nengok"
Issues = "https://github.com/waizwafiq/nengok/issues"
Changelog = "https://github.com/waizwafiq/nengok/releases"

[tool.hatch.version]
path = "nengok/__version__.py"

[tool.hatch.build.hooks.custom]
path = "hatch_build.py"

[tool.hatch.build.targets.wheel]
packages = ["nengok"]
artifacts = ["nengok/server/static/**"]

[tool.hatch.build.targets.wheel.force-include]
"nengok/state/alembic.ini" = "nengok/state/alembic.ini"
"nengok/state/alembic/script.py.mako" = "nengok/state/alembic/script.py.mako"
"nengok/agents/triage_prompt.md" = "nengok/agents/triage_prompt.md"

[tool.hatch.build.targets.wheel.shared-data]
"nengok/templates/config-local.toml" = "nengok/templates/config-local.toml"
"nengok/templates/config-cloud.toml" = "nengok/templates/config-cloud.toml"
"nengok/templates/config-qa-agent.toml" = "nengok/templates/config-qa-agent.toml"

[tool.hatch.build.targets.sdist]
include = [
    "/nengok",
    "/frontend",
    "/examples",
    "/hatch_build.py",
    "/README.md",
    "/LICENSE",
    "/pyproject.toml",
]
exclude = [
    "/frontend/node_modules",
    "/frontend/dist",
    "/frontend/.vite",
]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "F",   # pyflakes
    "W",   # pycodestyle warnings
    "I",   # isort
    "B",   # flake8-bugbear
    "UP",  # pyupgrade
    "RUF", # ruff-specific
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line length handled by formatter
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B011", "E402", "SIM117"]
"phoenix_harness/**" = ["B011"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
python_version = "3.11"
strict = false
warn_unused_ignores = true
warn_return_any = true
no_implicit_optional = true
disallow_untyped_defs = false
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "slow: integration tests that hit live Phoenix / Gemini APIs",
]
asyncio_mode = "auto"

[tool.bandit]
# Scope the scan to first-party code; tests and the live harness are
# scanned separately by the SDK CI workflow with the test-only skips
# applied there.
exclude_dirs = ["tests", "phoenix_harness", ".venv", "frontend", "node_modules"]
skips = [
    # B101 (assert_used): the orchestrator and MCP client use asserts for
    # type narrowing on values guaranteed non-None by the surrounding
    # control flow. Running under `python -O` is not a supported
    # deployment path.
    "B101",
    # B105 (hardcoded_password_string): false positives on env-var name
    # literals like `NENGOK_DASHBOARD_AUTH_TOKEN`. Nengok has no plaintext
    # secrets in source; all credentials flow through env vars or config.
    "B105",
    # B310 (urllib_urlopen): every urlopen site receives a URL that
    # NengokConfig.validate() has already parsed and confirmed has a
    # scheme + netloc. Operator-supplied schemes outside http(s) are an
    # operator choice, not an injected attack surface.
    "B310",
]
